--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -9,6 +9,10 @@
     "test:show-report": "playwright show-report src/test/reporters",
     "test:ui": "dotenv -e ./.env -e ../../.env -- playwright test --ui"
   },
+  "scripts": {
+  "build": "next build",
+  "postinstall": "prisma migrate deploy"
+}
   "dependencies": {
     "partysocket": "1.0.2",
     "@braintree/sanitize-url": "7.0.1",
