--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -7,7 +7,7 @@
     "start": "dotenv -e ./.env -e ../../.env -- next start",
     "test": "dotenv -e ./.env -e ../../.env -- playwright test",
     "test:show-report": "playwright show-report src/test/reporters",
-    "test:ui": "dotenv -e ./.env -e ../../.env -- playwright test --ui"
+    "test:ui": "dotenv -e ./.env -e ../../.env -- playwright test --ui",
     "build": "next build",
     "postinstall": "prisma migrate deploy"
   },
